--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,22 @@
     transform: rotate(360deg);
   }
 }
+
+img {
+  object-fit: cover;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-bold {
+  font-weight: 700;
+  color: red;
+  font-size: 18px;
+}
+
+button {
+  font-size: 18px;
+  margin: 12px;
+}
